--- a/aireviewer-frontend/package.json
+++ b/aireviewer-frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@microsoft/signalr": "^9.0.6",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.2",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.12.2",
