feat: 更新通知上下文和下拉菜单组件的导入路径，优化代码结构

--- a/.gitignore
+++ b/.gitignore
@@ -484,7 +484,6 @@ $RECYCLE.BIN/
 *.swp
 
 
-**/*.db
-**/*.db-sch
-**/*.db-wal
-**/*.db
+AIReview.API/*.db
+AIReview.API/*.db-wal
+AIReview.API/*.db-shm
