feat: 完成Redis分布式缓存集成，添加核心代码和文档
- 新增Redis分布式缓存和Job幂等性服务的实现
- 添加核心接口和服务实现文件
- 完成Redis集成的详细文档，包括配置、使用示例和故障排查指南
- 创建迁移清单，列出已完成和待完成的任务
- 提供快速开始指南，帮助用户快速部署和验证Redis集成

--- a/AIReview.API/appsettings.Development.json
+++ b/AIReview.API/appsettings.Development.json
@@ -7,6 +7,12 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=aireviewer-dev.db",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379,abortConnect=false"
+  },
+  "Redis": {
+    "InstanceName": "AIReview:Dev:",
+    "DefaultExpirationMinutes": 30,
+    "LockTimeoutSeconds": 30,
+    "JobExecutionTimeoutMinutes": 30
   }
 }
