--- a/AIReview.API/appsettings.json
+++ b/AIReview.API/appsettings.json
@@ -8,7 +8,13 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=aireviewer.db;",
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379,abortConnect=false"
+  },
+  "Redis": {
+    "InstanceName": "AIReview:",
+    "DefaultExpirationMinutes": 60,
+    "LockTimeoutSeconds": 30,
+    "JobExecutionTimeoutMinutes": 30
   },
   "Jwt": {
     "Secret": "YourSuperSecretKeyThatShouldBeAtLeast32Characters",
