feat: 添加分块评审配置选项，优化ChunkedReviewService的并发和重试机制

--- a/AIReview.API/appsettings.json
+++ b/AIReview.API/appsettings.json
@@ -22,5 +22,11 @@
     "Audience": "AIReview",
     "ExpiryInDays": 7
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ChunkedReview": {
+    "MaxConcurrency": 6,
+    "PerChunkTimeoutSeconds": 90,
+    "MaxRetries": 2,
+    "InitialRetryDelayMs": 400
+  }
 }
