--- a/aireviewer-frontend/package.json
+++ b/aireviewer-frontend/package.json
@@ -18,10 +18,13 @@
     "@tanstack/react-query": "^5.90.2",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.12.2",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-diff-view": "^3.3.2",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.1.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
