--- a/aireviewer-frontend/package.json
+++ b/aireviewer-frontend/package.json
@@ -25,6 +25,7 @@
     "react-diff-view": "^3.3.2",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
