feat: 更新.gitignore以忽略aireviewer数据库文件及其相关文件

--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,6 @@ $RECYCLE.BIN/
 AIReview.API/*.db
 AIReview.API/*.db-wal
 AIReview.API/*.db-shm
+AIReview.API/aireviewer.db
+AIReview.API/aireviewer.db-shm
+AIReview.API/aireviewer.db-wal
